-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.15.1, 5.15.16
-
26e75d452 (dev), 732962d60 (6.7)
Supported CSS border property for Qt rich text is not painted for the HTML <table> tag.
The CSS border property is supported for the HTML table tag as mentioned in the link below:
https://doc.qt.io/qt-5/richtext-html-subset.html
Additionally, if it's possible, a fix is suggested for the following CSS properties ( border-top, border-bottom, border-left border-right ) for the HTML <table>.
To reproduce the issue, run the attached project.
- resulted in
-
QTBUG-136590 Regression in QTextTable: border-collapse cell border rendering broken
-
- Closed
-
| For Gerrit Dashboard: QTBUG-123167 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 550658,10 | Support rendering CSS 'border' property for html table | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 555904,2 | Support rendering CSS 'border' property for html table | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |