src/gui/text/qcssparser.cpp
@@ -979,9 +979,11 @@ void ValueExtractor::borderValue(const Declaration &decl, int *width, QCss::Bord
     }
 
      data.color = parseBrushValue(decl.d->values.at(i), pal);
-     *color = brushFromData(data.color, pal);
-     if (data.color.type != BrushData::DependsOnThePalette)
-         decl.d->parsed = QVariant::fromValue<BorderData>(data);
+    if (data.color.type != BrushData::Invalid) {
+        *color = brushFromData(data.color, pal);
+        if (data.color.type != BrushData::DependsOnThePalette)
+            decl.d->parsed = QVariant::fromValue<BorderData>(data);
+    }
 }
 
 static void parseShorthandBackgroundProperty(const QList<QCss::Value> &values, BrushData *brush, QString *image, Repeat *repeat, Qt::Alignment *alignment, const QPalette &pal)
